imgui 레이어 연동

--- a/Game/Bin/imgui.ini
+++ b/Game/Bin/imgui.ini
@@ -21,9 +21,9 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1115,402
+ViewportPos=212,647
 ViewportId=0x59819E39
-Size=686,523
+Size=1241,823
 Collapsed=0
 
 [Window][운동 ##많이 됐다.]
@@ -45,8 +45,9 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Inspector]
-Pos=829,54
-Size=344,308
+ViewportPos=514,195
+ViewportId=0x78C57832
+Size=939,711
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -58,8 +59,9 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Outliner]
-Pos=1175,54
-Size=340,308
+ViewportPos=514,195
+ViewportId=0x78C57832
+Size=1178,711
 Collapsed=0
 DockId=0x0000000C,0
 
@@ -68,15 +70,205 @@ Pos=189,190
 Size=606,320
 Collapsed=0
 
+[Window][Example: Assets Browser]
+Pos=221,65
+Size=800,480
+Collapsed=0
+
+[Window][Delete?]
+Pos=581,373
+Size=264,130
+Collapsed=0
+
+[Window][Stacked 1]
+Pos=426,305
+Size=389,212
+Collapsed=0
+
+[Window][Dear ImGui Demo/ResizableChild_478B81A3]
+IsChild=1
+Size=1182,176
+
+[Window][Dear ImGui Demo/Red_BEEF922B]
+IsChild=1
+Size=200,100
+
+[Window][Dear ImGui Style Editor]
+ViewportPos=436,-17
+ViewportId=0xADEE0FF2
+Size=382,1026
+Collapsed=0
+
+[Window][Dear ImGui Demo/##Basket_87771727]
+IsChild=1
+Size=1161,360
+
+[Window][Dear ImGui Demo/##Basket_8B4CCC3E]
+IsChild=1
+Size=1161,360
+
+[Window][Dear ImGui Demo/##Basket_529977C1]
+IsChild=1
+Size=1161,360
+
+[Window][Dear ImGui Demo/0_E1BADA21]
+IsChild=1
+Size=560,360
+
+[Window][Dear ImGui Demo/##Basket_10C9C799]
+IsChild=1
+Size=1161,360
+
+[Window][Dear ImGui Demo/##Tree_EC99B1DE]
+IsChild=1
+Size=1161,360
+
+[Window][Dear ImGui Demo/##Basket_956142B6]
+IsChild=1
+Size=1161,360
+
+[Table][0xB6880529,2]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x51D6F5EA,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0xE102187A,3]
+RefScale=18
+Column 0  Width=55
+Column 1  Width=55
+Column 2  Width=55
+
+[Table][0xF1421304,3]
+RefScale=18
+Column 0  Width=55
+Column 1  Width=55
+Column 2  Weight=1.0000
+
+[Table][0xE212E0F0,6]
+RefScale=18
+Column 0  Width=55
+Column 1  Width=55
+Column 2  Width=-1
+Column 3  Weight=1.0000
+Column 4  Weight=1.0000
+Column 5  Weight=-1.0000
+
+[Table][0x86C9FC97,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x95990F63,3]
+RefScale=18
+Column 0  Width=55
+Column 1  Width=55
+Column 2  Width=55
+
+[Table][0x603C335E,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0xA6C6558A,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Table][0x3A20F3F3,3]
+RefScale=18
+Column 0  Width=46
+Column 1  Width=46
+Column 2  Width=46
+
+[Table][0xEA44DE71,3]
+RefScale=18
+Column 0  Weight=1.0000
+Column 1  Width=108
+Column 2  Width=162
+
+[Table][0x29CD9FF7,3]
+
+[Table][0x369EB90F,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x2ACCE68A,3]
+RefScale=18
+Column 0  Width=68
+Column 1  Width=68
+Column 2  Width=190
+
+[Table][0x951FCC8A,6]
+RefScale=18
+Column 0  Width=30 Sort=0v
+Column 1  Width=52
+Column 2  Width=79
+Column 3  Width=68
+Column 4  Weight=1.0000
+Column 5  Width=-1
+
+[Table][0x6655AF53,4]
+RefScale=18
+Column 0  Width=30 Sort=0v
+Column 1  Width=76
+Column 2  Width=42
+Column 3  Weight=1.0000
+
+[Table][0x302651AD,14]
+RefScale=18
+Column 0  Width=52
+Column 1  Width=24
+Column 2  Width=24
+Column 3  Width=24
+Column 4  Width=24
+Column 5  Width=23
+Column 6  Width=24
+Column 7  Width=24
+Column 8  Width=24
+Column 9  Width=24
+Column 10 Width=24
+Column 11 Width=24
+Column 12 Width=24
+Column 13 Width=24
+
+[Table][0x5145577A,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0xEB78AB2C,3]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+Column 2  Weight=1.0000
+
+[Table][0x127BEAD2,7]
+RefScale=18
+Column 0  Width=45
+Column 1  Width=101
+Column 2  Width=101
+Column 3  Width=101
+Column 4  Width=101
+Column 5  Width=101
+Column 6  Width=101
+
+[Table][0xAED4F161,3]
+RefScale=18
+Column 0  Width=1099 Visible=1
+Column 1  Weight=1.0000 Visible=1 Sort=0v
+Column 2  Width=-1 Visible=0
+
 [Docking][Data]
 DockNode        ID=0x00000001 Pos=862,272 Size=208,195 Split=Y
   DockNode      ID=0x00000002 Parent=0x00000001 SizeRef=208,169 Selected=0xA17458AA
   DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=208,24 Selected=0x6A833D3F
-DockNode        ID=0x00000007 Pos=837,85 Size=686,308 Split=X
+DockNode        ID=0x00000007 Pos=514,195 Size=1178,711 Split=X
   DockNode      ID=0x00000008 Parent=0x00000007 SizeRef=340,308 Selected=0xFA1AB224
   DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=344,308 Split=X Selected=0x36DC96AB
-    DockNode    ID=0x0000000A Parent=0x00000009 SizeRef=344,308 Selected=0x36DC96AB
-    DockNode    ID=0x0000000B Parent=0x00000009 SizeRef=340,308 Split=Y Selected=0x66BFF854
+    DockNode    ID=0x0000000A Parent=0x00000009 SizeRef=939,308 Selected=0x36DC96AB
+    DockNode    ID=0x0000000B Parent=0x00000009 SizeRef=237,308 Split=Y Selected=0x66BFF854
       DockNode  ID=0x0000000C Parent=0x0000000B SizeRef=340,154 Selected=0x66BFF854
       DockNode  ID=0x00000004 Parent=0x0000000B SizeRef=340,152
 
