imGui 컴포넌트별 연동

--- a/Game/Bin/imgui.ini
+++ b/Game/Bin/imgui.ini
@@ -21,10 +21,10 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=212,647
+ViewportPos=383,909
 ViewportId=0x59819E39
 Size=1241,823
-Collapsed=0
+Collapsed=1
 
 [Window][운동 ##많이 됐다.]
 Pos=651,380
@@ -45,11 +45,11 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Inspector]
-ViewportPos=514,195
-ViewportId=0x78C57832
-Size=939,711
+ViewportPos=-1669,58
+ViewportId=0x99FE08C5
+Size=589,711
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x0000000C,0
 
 [Window][Outline]
 ViewportPos=1128,680
@@ -59,11 +59,12 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Outliner]
-ViewportPos=514,195
-ViewportId=0x78C57832
-Size=1178,711
+ViewportPos=-1669,58
+ViewportId=0x99FE08C5
+Pos=591,0
+Size=587,711
 Collapsed=0
-DockId=0x0000000C,0
+DockId=0x00000007,0
 
 [Window][Test]
 Pos=189,190
@@ -126,6 +127,11 @@ Size=1161,360
 [Window][Dear ImGui Demo/##Basket_956142B6]
 IsChild=1
 Size=1161,360
+
+[Window][ListUI]
+Pos=60,60
+Size=168,190
+Collapsed=0
 
 [Table][0xB6880529,2]
 RefScale=18
@@ -264,11 +270,11 @@ Column 2  Width=-1 Visible=0
 DockNode        ID=0x00000001 Pos=862,272 Size=208,195 Split=Y
   DockNode      ID=0x00000002 Parent=0x00000001 SizeRef=208,169 Selected=0xA17458AA
   DockNode      ID=0x00000003 Parent=0x00000001 SizeRef=208,24 Selected=0x6A833D3F
-DockNode        ID=0x00000007 Pos=514,195 Size=1178,711 Split=X
-  DockNode      ID=0x00000008 Parent=0x00000007 SizeRef=340,308 Selected=0xFA1AB224
-  DockNode      ID=0x00000009 Parent=0x00000007 SizeRef=344,308 Split=X Selected=0x36DC96AB
-    DockNode    ID=0x0000000A Parent=0x00000009 SizeRef=939,308 Selected=0x36DC96AB
-    DockNode    ID=0x0000000B Parent=0x00000009 SizeRef=237,308 Split=Y Selected=0x66BFF854
-      DockNode  ID=0x0000000C Parent=0x0000000B SizeRef=340,154 Selected=0x66BFF854
-      DockNode  ID=0x00000004 Parent=0x0000000B SizeRef=340,152
+DockNode        ID=0x00000005 Pos=-1669,58 Size=1178,711 Split=X
+  DockNode      ID=0x00000006 Parent=0x00000005 SizeRef=589,711 Split=X
+    DockNode    ID=0x00000008 Parent=0x00000006 SizeRef=340,308 Selected=0xFA1AB224
+    DockNode    ID=0x00000009 Parent=0x00000006 SizeRef=344,308 Split=Y Selected=0x36DC96AB
+      DockNode  ID=0x0000000C Parent=0x00000009 SizeRef=340,154 Selected=0x36DC96AB
+      DockNode  ID=0x00000004 Parent=0x00000009 SizeRef=340,152
+  DockNode      ID=0x00000007 Parent=0x00000005 SizeRef=587,711 Selected=0x66BFF854
 
